--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1 i18n="@@TranslationTagForTesting">App component</h1>
 
-
+<button routerLink="/wallet">Wallet</button>
 <button routerLink="/account">Account</button>
 <button routerLink="/wyre">Wyre</button>
 
