add qrcode creation service

--- a/wallet-frontend/src/app/hd-wallet/hd-wallet.component.html
+++ b/wallet-frontend/src/app/hd-wallet/hd-wallet.component.html
@@ -6,6 +6,7 @@
   <br>
 
   <div>Mnemonic:</div>
+  <div id="qrcode" #qrcode></div>
   <textarea type="text" style="width:400px" [(ngModel)]="words"></textarea>
 
   <div>Password:</div>
