--- a/wallet-frontend/src/app/account/new/new-account.component.html
+++ b/wallet-frontend/src/app/account/new/new-account.component.html
@@ -1,18 +1,16 @@
+<div id="qrcode" #qrcode></div>
+<a [href]="href" *ngIf="!(display)" (click)="downloadImage()" download>Download Image</a>
+
+<form class="example-form"  *ngIf="display" [formGroup]="newAccountForm">
 <h2>Создать аккаунт</h2>
 <div>
-  Вы получите QR Code с зашифрованными секретными ключами на Вашу почту.
-  Только Вы сможете расшифровать QR Code Вашим паролем
+    Вы получите QR Code с зашифрованными секретными ключами на Вашу почту.
+    Только Вы сможете расшифровать QR Code Вашим паролем
 </div>
-<form class="example-form" [formGroup]="newAccountForm">
-
-  <!--  <input type="email" name="email" ngModel [email]="true">-->
 
   <section>
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Email" formControlName="email" [errorStateMatcher]="matcher">
-      <!--
-      <mat-hint>Errors appear instantly!</mat-hint>
-      -->
       <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
         Введите корректный e-mail
       </mat-error>
@@ -30,7 +28,7 @@
 
   <section>
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Favorite food" value="">
+      <input matInput placeholder="Favorite food" [checked]="password" value="">
     </mat-form-field>
   </section>
 
@@ -57,12 +55,5 @@
       Send QR code to my email
     </mat-slide-toggle>
   </section>
-
-  <!--
-  <mat-button>Продолжить</mat-button>
-  -->
-  <div class="example-button-row">
-    <button mat-raised-button color="primary">Continue</button>
-  </div>
-
+    <button mat-raised-button color="primary" (click)="createNewAccount()">Continue</button>
 </form>
