--- a/wallet-frontend/src/app/account/new/new-account.component.html
+++ b/wallet-frontend/src/app/account/new/new-account.component.html
@@ -28,7 +28,7 @@
 
   <section>
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Favorite food" [checked]="password" value="">
+      <input matInput placeholder="Favorite food" formControlName="password" value="">
     </mat-form-field>
   </section>
 
