--- a/wallet-frontend/src/app/send/send.component.html
+++ b/wallet-frontend/src/app/send/send.component.html
@@ -1,11 +1,18 @@
+<div *ngIf="fastMode">
+  <h2>Fast mode</h2>
+</div>
 
-<input type="text" [(ngModel)]="toAddress" placeholder="to address">
-<br>
-<input type="text" [(ngModel)]="amount" placeholder="amount">
-<br>
-<label for="pass"></label><input id="pass" [(ngModel)]="password" type="password" width="200px">
-<br>
-<app-qr-code (messageEvent)="receiveQrCodeData($event)"></app-qr-code>
+
+<div *ngIf="qrCodeMode">
+  <input type="text" [(ngModel)]="toAddress" placeholder="to address">
+  <br>
+  <input type="text" [(ngModel)]="amount" placeholder="amount">
+  <br>
+  <label for="pass"></label><input id="pass" [(ngModel)]="password" type="password" width="200px">
+  <br>
+  <app-qr-code (messageEvent)="receiveQrCodeData($event)"></app-qr-code>
+</div>
+
 <br>
 <br>
 <p>Hash: {{hash}}</p>
