add polifills and refactor

--- a/wallet-frontend/src/app/app.component.html
+++ b/wallet-frontend/src/app/app.component.html
@@ -11,6 +11,7 @@
 <button routerLink="/ltc">Litecoin</button>
 <button routerLink="/eth">Ethereum</button>
 <button routerLink="/etc">EthereumClassic</button>
+<button routerLink="/ton">TON</button>
 
 <button routerLink="">Home</button>
 
