--- a/wallet-frontend/src/app/send/send.component.html
+++ b/wallet-frontend/src/app/send/send.component.html
@@ -10,7 +10,7 @@
   <br>
   <label for="pass"></label><input id="pass" [(ngModel)]="password" type="password" width="200px">
   <br>
-  <app-qr-code (messageEvent)="receiveQrCodeData($event)"></app-qr-code>
+  <app-upload-qr-code (messageEvent)="receiveQrCodeData($event)"></app-upload-qr-code>
 </div>
 
 <br>
