fix error component error

--- a/wallet-frontend/src/app/app.component.html
+++ b/wallet-frontend/src/app/app.component.html
@@ -7,16 +7,15 @@
 
 <button routerLink="/wallet">Wallet</button>
 <button routerLink="/account">Account</button>
-<button routerLink="/wyre">Wyre</button>
 
-<button routerLink="/xlm">XLM</button>
-<button routerLink="/waves">Waves</button>
-<button routerLink="/btc">Bitcoin</button>
-<button routerLink="/bch">BitcoinCash</button>
-<button routerLink="/ltc">Litecoin</button>
-<button routerLink="/eth">Ethereum</button>
-<button routerLink="/etc">EthereumClassic</button>
-<button routerLink="/ton">TON</button>
+<button routerLink="/send/xlm">XLM</button>
+<button routerLink="/send/waves">Waves</button>
+<button routerLink="/send/btc">Bitcoin</button>
+<button routerLink="/send/bch">BitcoinCash</button>
+<button routerLink="/send/ltc">Litecoin</button>
+<button routerLink="/send/eth">Ethereum</button>
+<button routerLink="/send/etc">EthereumClassic</button>
+<button routerLink="/send/ton">TON</button>
 
 <button routerLink="">Home</button>
 
