some refactoring for test hd-wallet

--- a/wallet-frontend/src/app/app.component.html
+++ b/wallet-frontend/src/app/app.component.html
@@ -6,7 +6,8 @@
 <h1 i18n="@@TranslationTagForTesting">App component</h1>
 
 <button routerLink="/wallet">Wallet</button>
-<button routerLink="/account">Account</button>
+<button routerLink="/account/new">New Account</button>
+<button routerLink="/account/import">Import Account</button>
 
 <button routerLink="/send/xlm">XLM</button>
 <button routerLink="/send/waves">Waves</button>
